# spacecraft-rn

./: AGENTS.md  CHANGELOG.md  app.config.js  app.json  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: pr-build.yml
app/(tabs)/: sensor.tsx
app/components/: SensorChart.tsx
apps/app/: .eslintrc.js  _layout.tsx  app.config.js  app.json  package.json
apps/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
apps/app/src/app/: _layout.tsx  main-module.tsx  settings.tsx
apps/app/src/app/(tabs)/: _layout.tsx  explore.tsx  sensor.tsx
apps/cool-app/: app.json  package.json
base/: package.json
modules/account-module/: package.json
modules/account-module/src/: AccountModule.web.ts
modules/cpp-module/: README.md  expo-module.config.json  index.ts  package.json
modules/cpp-module/android/: build.gradle
modules/cpp-module/android/src/main/cpp/: CMakeLists.txt  CppModule.cpp
modules/cpp-module/android/src/main/java/com/cppmodule/: CppModule.java  CppModulePackage.java
modules/cpp-module/ios/: CppModule.podspec
modules/cpp-module/ios/CppModule/: CppModule.cpp  CppModule.h  CppModuleBridge.mm
modules/main-module/: .gitignore  expo-module.config.json  package.json
modules/main-module/android/src/main/java/com/mainmodule/: MainModule.java  MainModulePackage.java
modules/main-module/ios/: MainModule.podspec
modules/main-module/ios/MainModule/: MainModule.h  MainModule.m
modules/main-module/src/: MainModule.ts  MainModule.web.ts  MainModuleView.tsx
